# magi_calcs

./: .cursorrules  .dockerignore  .env  Dockerfile  README.md  alec_baldwin_transit.json  api.py  build.py  carmen_dennis_data.json  charles_camilla_synastry.json  charles_natal.json  docker-compose.yml  main.py  mark_zuckerberg_natal.json  nicole_kidman_transit.json  pyproject.toml  setup.py  sophie_data.json  sophie_john_synastry.json  sophie_natal.json  sophie_single_transit.json  sophie_transit_data.json  sophie_transit_loop.json  woody_mia_synastry.json
astro_charts/: chart_creator.py  cosmobiology_calculator.py  kerykeion_chart.py  magi_aspects.py  magi_linkages.py  magi_synastry.py  marital_linkages.py  romance_linkages.py  sexual_linkages.py  transit_calculator.c  transit_calculator.pyx
astro_charts/models/: request_models.py
astro_charts/services/: alt_marriage_date_finder.py  geo_service.py  (+16 more)
cache/: kerykeion_geonames_cache.sqlite
charts/: Diana_Spencer_Charles_Windsor_synastry_easy.html  Dom_transit_loop_mp_viz.html  Dom_transit_loop_viz.html  Dom_transit_viz.html  Gabriel_Matos_natal_viz.html  Gary_Grinberg_natal_viz.html  Gary_Grinberg_transit_loop_viz.html  Harrison_Ford_transit_loop_viz.html  Harrison_Ford_transit_loop_viz_1.html  Harrison_Ford_transit_loop_viz_2.html  Harrison_Ford_transit_loop_viz_3.html  Harrison_Ford_transit_loop_viz_month_1.html  Mark_Zuckerberg_natal_viz.html  Nicole_Kidman_transit_loop_mp_viz.html  Nicole_Kidman_transit_loop_viz.html  Nicole_Kidman_transit_viz.html  Orlando_Dom_natal_viz.html  Sophie_transit_loop_viz.html
(+14 files in other folders)
